--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="carousel-bg-info">
       <div class="d-block m-auto">
         <img src="./assets/img/kr_logo.png" alt="Logo KR" class="img-fluid d-block logo_super">
-        <h2>KR Photography</h2>
+        <h2 class="text-center">KR Photography</h2>
         <h4 class="text-center">Capture every moments of your life with us!</h4>
         <a href="#jumbo" class="btn rounded-pill shadow-0 btn-outline-light d-block m-auto">Get Started</a>
       </div>
