--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/css/utils.css">
-  <link rel="stylesheet" href="assets/css/styleshitter.css">
+  <link rel="stylesheet" href="assets/css/styleshit.css">
   <style>
     body {
       overflow-x: hidden;
