--- a/services_funeral.html
+++ b/services_funeral.html
@@ -18,7 +18,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/css/utils.css">
-  <link rel="stylesheet" href="assets/css/servicess.css">
+  <link rel="stylesheet" href="assets/css/services.css">
   <link rel="stylesheet" href="assets/vendor/owl/dist/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/vendor/owl/dist/assets/owl.theme.default.min.css">
   <style>
