--- a/services_ads.html
+++ b/services_ads.html
@@ -79,16 +79,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/sgd/#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/krphotography/#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sgd/#services">Services</a>
+              <a class="nav-link" href="/krphotography/#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sgd/#awards">Awards</a>
+              <a class="nav-link" href="/krphotography/#awards">Awards</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sgd/#inquire-section">Inquire</a>
+              <a class="nav-link" href="/krphotography/#inquire-section">Inquire</a>
             </li>
           </ul>
         </div>
@@ -149,13 +149,13 @@
             <a class="text-white" href="#">Home</a>
           </li>
           <li class="list-group-item bg-transparent" style="width: fit-content;">
-            <a class="text-white" href="/sgd/#services">Services</a>
+            <a class="text-white" href="/krphotography/#services">Services</a>
           </li>
           <li class="list-group-item bg-transparent" style="width: fit-content;">
-            <a class="text-white" href="/sgd/#awards">Awards</a>
+            <a class="text-white" href="/krphotography/#awards">Awards</a>
           </li>
           <li class="list-group-item bg-transparent" style="width: fit-content;">
-            <a class="text-white" href="/sgd/#inquire-section">Inquire</a>
+            <a class="text-white" href="/krphotography/#inquire-section">Inquire</a>
           </li>
         </ul>
       </div>
